src/test/deca/syntax/invalid/without_class/error_multiline_comment.deca
// Description:
//    Error using multiline comment   
//
// Result:
//     Syntax Error
//     line 13

{
    /* This should be 
        a multiline comment 
    
    int x = 0;
    return x; // */ expected before cbrace 
}